--- a/src/client/components/List/List.scss
+++ b/src/client/components/List/List.scss
@@ -7,6 +7,7 @@
   padding: 0;
   margin: -6px;
   max-height: 400px;
+  min-height: 60px;
   overflow-y: auto;
   display: flex;
   justify-content: stretch;
@@ -18,6 +19,7 @@
   flex: 1 1 auto;
   margin: 5px;
   display: inline-flex;
+  max-height: max-content;
 
   > span {
     width: 100%;
